resources copy/.antlr/KodexaSelectorParser.java
// Generated from /Users/pdodds/src/kodexa/kodexa/resources copy/KodexaSelector.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class KodexaSelectorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OR=1, AND=2, INTERSECT=3, PIPELINE=4, PATH_SEP=5, ABBREV_PATH_SEP=6, ABBREV_STEP_SELF=7, 
		ABBREV_STEP_PARENT=8, AXIS_SEP=9, ABBREV_AXIS_AT=10, LPAREN=11, RPAREN=12, 
		LBRACKET=13, RBRACKET=14, UNION=15, EQUALS=16, REL_OP=17, PLUS=18, MINUS=19, 
		STAR=20, COMMA=21, COLON=22, DOLLAR=23, TRUE=24, FALSE=25, FUNCTION_NAME=26, 
		LITERAL=27, FLOAT=28, INTEGER=29, NCNAME=30, FUNCNAME=31, AXISNAME=32, 
		WS=33;
	public static final int
		RULE_xpath = 0, RULE_expr = 1, RULE_absoluteLocationPath = 2, RULE_abbreviatedAbsoluteLocationPath = 3, 
		RULE_relativeLocationPath = 4, RULE_step = 5, RULE_axisSpecifier = 6, 
		RULE_nodeTest = 7, RULE_nameTest = 8, RULE_qName = 9, RULE_filterExpr = 10, 
		RULE_predicateList = 11, RULE_predicate = 12, RULE_variableReference = 13, 
		RULE_number = 14, RULE_booleanLiteral = 15, RULE_functionCall = 16, RULE_builtInFunctionCall = 17, 
		RULE_funcQName = 18, RULE_formalArguments = 19, RULE_argumentList = 20, 
		RULE_pathSep = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"xpath", "expr", "absoluteLocationPath", "abbreviatedAbsoluteLocationPath", 
			"relativeLocationPath", "step", "axisSpecifier", "nodeTest", "nameTest", 
			"qName", "filterExpr", "predicateList", "predicate", "variableReference", 
			"number", "booleanLiteral", "functionCall", "builtInFunctionCall", "funcQName", 
			"formalArguments", "argumentList", "pathSep"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'or'", "'and'", "'intersect'", "'stream'", "'/'", "'//'", "'.'", 
			"'..'", "'::'", "'@'", "'('", "')'", "'['", "']'", "'|'", null, null, 
			"'+'", "'-'", "'*'", "','", "':'", "'$'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OR", "AND", "INTERSECT", "PIPELINE", "PATH_SEP", "ABBREV_PATH_SEP", 
			"ABBREV_STEP_SELF", "ABBREV_STEP_PARENT", "AXIS_SEP", "ABBREV_AXIS_AT", 
			"LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "UNION", "EQUALS", "REL_OP", 
			"PLUS", "MINUS", "STAR", "COMMA", "COLON", "DOLLAR", "TRUE", "FALSE", 
			"FUNCTION_NAME", "LITERAL", "FLOAT", "INTEGER", "NCNAME", "FUNCNAME", 
			"AXISNAME", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KodexaSelector.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KodexaSelectorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XpathContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public XpathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xpath; }
	}

	public final XpathContext xpath() throws RecognitionException {
		XpathContext _localctx = new XpathContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_xpath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EqualsExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode EQUALS() { return getToken(KodexaSelectorParser.EQUALS, 0); }
		public EqualsExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SubtractExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode MINUS() { return getToken(KodexaSelectorParser.MINUS, 0); }
		public SubtractExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IntersectExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode INTERSECT() { return getToken(KodexaSelectorParser.INTERSECT, 0); }
		public IntersectExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DirectNameTestContext extends ExprContext {
		public NameTestContext nameTest() {
			return getRuleContext(NameTestContext.class,0);
		}
		public DirectNameTestContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OR() { return getToken(KodexaSelectorParser.OR, 0); }
		public OrExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AbsolutePathExprContext extends ExprContext {
		public AbsoluteLocationPathContext absoluteLocationPath() {
			return getRuleContext(AbsoluteLocationPathContext.class,0);
		}
		public AbsolutePathExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuncCallExprContext extends ExprContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public FuncCallExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UnionExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode UNION() { return getToken(KodexaSelectorParser.UNION, 0); }
		public UnionExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RelationalExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode REL_OP() { return getToken(KodexaSelectorParser.REL_OP, 0); }
		public RelationalExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PipelineExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode PIPELINE() { return getToken(KodexaSelectorParser.PIPELINE, 0); }
		public PipelineExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RelativePathExprContext extends ExprContext {
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class,0);
		}
		public RelativePathExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RootNameTestContext extends ExprContext {
		public TerminalNode PATH_SEP() { return getToken(KodexaSelectorParser.PATH_SEP, 0); }
		public NameTestContext nameTest() {
			return getRuleContext(NameTestContext.class,0);
		}
		public RootNameTestContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UnaryMinusExprContext extends ExprContext {
		public TerminalNode MINUS() { return getToken(KodexaSelectorParser.MINUS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UnaryMinusExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AbbrevAbsPathExprContext extends ExprContext {
		public AbbreviatedAbsoluteLocationPathContext abbreviatedAbsoluteLocationPath() {
			return getRuleContext(AbbreviatedAbsoluteLocationPathContext.class,0);
		}
		public AbbrevAbsPathExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AddExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(KodexaSelectorParser.PLUS, 0); }
		public AddExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FilterExpressionContext extends ExprContext {
		public FilterExprContext filterExpr() {
			return getRuleContext(FilterExprContext.class,0);
		}
		public FilterExpressionContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BooleanLiteralExprContext extends ExprContext {
		public BooleanLiteralContext booleanLiteral() {
			return getRuleContext(BooleanLiteralContext.class,0);
		}
		public BooleanLiteralExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PathBinaryExprContext extends ExprContext {
		public FilterExprContext filterExpr() {
			return getRuleContext(FilterExprContext.class,0);
		}
		public PathSepContext pathSep() {
			return getRuleContext(PathSepContext.class,0);
		}
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class,0);
		}
		public PathBinaryExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AndExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode AND() { return getToken(KodexaSelectorParser.AND, 0); }
		public AndExprContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				_localctx = new UnaryMinusExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(47);
				match(MINUS);
				setState(48);
				expr(11);
				}
				break;
			case 2:
				{
				_localctx = new FuncCallExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(49);
				functionCall();
				}
				break;
			case 3:
				{
				_localctx = new PathBinaryExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(50);
				filterExpr(0);
				setState(51);
				pathSep();
				setState(52);
				relativeLocationPath(0);
				}
				break;
			case 4:
				{
				_localctx = new RelativePathExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(54);
				relativeLocationPath(0);
				}
				break;
			case 5:
				{
				_localctx = new AbsolutePathExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(55);
				absoluteLocationPath();
				}
				break;
			case 6:
				{
				_localctx = new AbbrevAbsPathExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56);
				abbreviatedAbsoluteLocationPath();
				}
				break;
			case 7:
				{
				_localctx = new FilterExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(57);
				filterExpr(0);
				}
				break;
			case 8:
				{
				_localctx = new DirectNameTestContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(58);
				nameTest();
				}
				break;
			case 9:
				{
				_localctx = new RootNameTestContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(59);
				match(PATH_SEP);
				setState(60);
				nameTest();
				}
				break;
			case 10:
				{
				_localctx = new BooleanLiteralExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(61);
				booleanLiteral();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(91);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new OrExprContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(64);
						if (!(precpred(_ctx, 19))) throw new FailedPredicateException(this, "precpred(_ctx, 19)");
						setState(65);
						match(OR);
						setState(66);
						expr(20);
						}
						break;
					case 2:
						{
						_localctx = new AndExprContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(67);
						if (!(precpred(_ctx, 18))) throw new FailedPredicateException(this, "precpred(_ctx, 18)");
						setState(68);
						match(AND);
						setState(69);
						expr(19);
						}
						break;
					case 3:
						{
						_localctx = new EqualsExprContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(70);
						if (!(precpred(_ctx, 17))) throw new FailedPredicateException(this, "precpred(_ctx, 17)");
						setState(71);
						match(EQUALS);
						setState(72);
						expr(18);
						}
						break;
					case 4:
						{
						_localctx = new RelationalExprContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(73);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(74);
						match(REL_OP);
						setState(75);
						expr(17);
						}
						break;
					case 5:
						{
						_localctx = new AddExprContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(76);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(77);
						match(PLUS);
						setState(78);
						expr(16);
						}
						break;
					case 6:
						{
						_localctx = new SubtractExprContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(79);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(80);
						match(MINUS);
						setState(81);
						expr(15);
						}
						break;
					case 7:
						{
						_localctx = new UnionExprContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(82);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(83);
						match(UNION);
						setState(84);
						expr(14);
						}
						break;
					case 8:
						{
						_localctx = new IntersectExprContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(85);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(86);
						match(INTERSECT);
						setState(87);
						expr(13);
						}
						break;
					case 9:
						{
						_localctx = new PipelineExprContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(88);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(89);
						match(PIPELINE);
						setState(90);
						expr(11);
						}
						break;
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AbsoluteLocationPathContext extends ParserRuleContext {
		public AbsoluteLocationPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_absoluteLocationPath; }
	 
		public AbsoluteLocationPathContext() { }
		public void copyFrom(AbsoluteLocationPathContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RootOnlyContext extends AbsoluteLocationPathContext {
		public TerminalNode PATH_SEP() { return getToken(KodexaSelectorParser.PATH_SEP, 0); }
		public RootOnlyContext(AbsoluteLocationPathContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RootPathContext extends AbsoluteLocationPathContext {
		public TerminalNode PATH_SEP() { return getToken(KodexaSelectorParser.PATH_SEP, 0); }
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class,0);
		}
		public RootPathContext(AbsoluteLocationPathContext ctx) { copyFrom(ctx); }
	}

	public final AbsoluteLocationPathContext absoluteLocationPath() throws RecognitionException {
		AbsoluteLocationPathContext _localctx = new AbsoluteLocationPathContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_absoluteLocationPath);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new RootOnlyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(PATH_SEP);
				}
				break;
			case 2:
				_localctx = new RootPathContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(PATH_SEP);
				setState(98);
				relativeLocationPath(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AbbreviatedAbsoluteLocationPathContext extends ParserRuleContext {
		public TerminalNode ABBREV_PATH_SEP() { return getToken(KodexaSelectorParser.ABBREV_PATH_SEP, 0); }
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class,0);
		}
		public AbbreviatedAbsoluteLocationPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abbreviatedAbsoluteLocationPath; }
	}

	public final AbbreviatedAbsoluteLocationPathContext abbreviatedAbsoluteLocationPath() throws RecognitionException {
		AbbreviatedAbsoluteLocationPathContext _localctx = new AbbreviatedAbsoluteLocationPathContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_abbreviatedAbsoluteLocationPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(ABBREV_PATH_SEP);
			setState(102);
			relativeLocationPath(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelativeLocationPathContext extends ParserRuleContext {
		public RelativeLocationPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relativeLocationPath; }
	 
		public RelativeLocationPathContext() { }
		public void copyFrom(RelativeLocationPathContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SingleStepContext extends RelativeLocationPathContext {
		public StepContext step() {
			return getRuleContext(StepContext.class,0);
		}
		public SingleStepContext(RelativeLocationPathContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PathStepContext extends RelativeLocationPathContext {
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class,0);
		}
		public TerminalNode PATH_SEP() { return getToken(KodexaSelectorParser.PATH_SEP, 0); }
		public StepContext step() {
			return getRuleContext(StepContext.class,0);
		}
		public PathStepContext(RelativeLocationPathContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AbbrevPathStepContext extends RelativeLocationPathContext {
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class,0);
		}
		public TerminalNode ABBREV_PATH_SEP() { return getToken(KodexaSelectorParser.ABBREV_PATH_SEP, 0); }
		public StepContext step() {
			return getRuleContext(StepContext.class,0);
		}
		public AbbrevPathStepContext(RelativeLocationPathContext ctx) { copyFrom(ctx); }
	}

	public final RelativeLocationPathContext relativeLocationPath() throws RecognitionException {
		return relativeLocationPath(0);
	}

	private RelativeLocationPathContext relativeLocationPath(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RelativeLocationPathContext _localctx = new RelativeLocationPathContext(_ctx, _parentState);
		RelativeLocationPathContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_relativeLocationPath, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new SingleStepContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;
